--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/bojana12/building-with-responsive-design#readme",
   "dependencies": {
+    "material-design-icons": "^3.0.1",
     "normalize.css": "^8.0.0"
   }
 }
